--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body class="bg-primary-500 color-secondary-900">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" class="w-full"></div>
+    <div id="root" class="w-full h-full"></div>
     <script src="/src/index.jsx" type="module"></script>
   </body>
 </html>
